package com.personal.gwent.model.gameboard;

public enum LeaderAbility {
    EREDINHUNT, EREDINRIDERS, EREDINWORLDS, EREDINDEATH, FOLTESTTEMERIA,
    FOLTESTFORGED, FOLTESTSIEGEMASTER, FOLTESTNORTH, FRANCESCAELF,
    FRANCESCABEAUTIFUL, FRANCESCAVALLEY, FRANCESCABLATHANA, EMHYRMAJESTY,
    EMHYRNILFGAARD, EMHYRFLAME, EMHYRRELENTLESS
}
