package com.personal.gwent.model.gameboard;

public enum Range {
    CLOSE, RANGED, SIEGE
}
