package com.personal.gwent.model.gameboard;

// TODO: May need to add NONE
public enum SpecialAbility {
    SPY, AGILE, MEDIC, MORALEBOOST, MUSTER, TIGHTBOND, SCORCH
}
