package com.personal.gwent.model.gameboard.cards;

public enum Faction {
    NILFGAARD, MONSTERS, NORTHERNREALM, SCOIATEL
}
